--- a/data_vector_search.ipynb
+++ b/data_vector_search.ipynb
@@ -48,7 +48,7 @@
     "    Output:\n",
     "    - Returns an initialized collection from ChromaDB.\n",
     "    \"\"\"\n",
-    "    client = chromadb.Client(Settings(is_persistent=True, persist_directory='./CHROMADB'))  # Directory name for persistent storage\n",
+    "    client = chromadb.Client(Settings(is_persistent=True, persist_directory='./chromadb'))   \n",
     "    collection = client.get_or_create_collection(collection_name)\n",
     "    print(f\"ChromaDB initialized and collection '{collection_name}' ready\")\n",
     "    return collection"
